# RenderEngine

./: .gitmodules  CMakeLists.txt  README
.gitHub/workflows/: ci.yml
.github/workflows/: ci.yml  cmake-multi-platform.yml
assets/: README
src/: Main.cpp
src/tests/: test_main.cpp
